Fix contact form fields spilling over.

--- a/app/assets/stylesheets/components/form.css.scss
+++ b/app/assets/stylesheets/components/form.css.scss
@@ -1,7 +1,9 @@
 input.form__input--auto_width {
   width: auto;
+  max-width: 40%;
 }
 
 textarea.form__input--auto_width {
   width: auto;
+  max-width: 40%;
 }
